--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "car_showcase",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.3.1",
+    "npm": "9.6.7"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
